# ai-platform-demo

./: .env.example  .gitignore  README.md  SETUP.md  docker-compose.yml  project guidence .md  pyproject.toml
.claude/: settings.local.json
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/database/: __init__.py  connection.py
backend/app/integrations/: __init__.py  openai_client.py
backend/app/models/: __init__.py  agent.py  base.py  document.py  message.py  session.py
backend/app/routes/: __init__.py  agents.py  documents.py  health.py  messages.py  sessions.py  voice.py
backend/app/schemas/: __init__.py  agent.py  common.py  document.py  message.py  session.py  voice.py
backend/app/services/: __init__.py  chat_service.py  rag_service.py  voice_service.py
backend/app/utils/: exceptions.py
backend/tests/: conftest.py  test_agents.py  test_health.py  test_messages.py  test_sessions.py  test_voice.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  router.tsx
frontend/src/context/: AppContext.tsx  AppReducer.test.ts  AppReducer.ts
frontend/src/hooks/: useAgents.ts  useAudioPlayer.ts  useChat.ts  useSessions.ts  useUrlSync.ts  useVoiceRecorder.ts
frontend/src/services/: agentService.ts  api.ts  documentService.ts  messageService.ts  sessionService.ts  voiceService.test.ts  voiceService.ts
frontend/src/styles/: globals.css
frontend/src/test/: setup.ts
postman/: collection.json
(+25 files in other folders)
