[project]
name = "agenticio"
version = "0.1.0"
description = "AI Agent Platform"
authors = [
    {name = "Mahmod Aboalhassan",email = "Mahmoud.Aboalhassan@THARWAH.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.2,<0.129.0)",
    "uvicorn[standrad] (>=0.40.0,<0.41.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
